--- a/src/components/AllPrdctsCllction.css
+++ b/src/components/AllPrdctsCllction.css
@@ -1,5 +1,5 @@
 div#All-Products-Div {
-    background: #2ae5c2;
+    background: #eaeded;
     display: flex;
     flex-flow: wrap;
     gap: 20px 10px;
