--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,15 +1,21 @@
 .container {
     height: 60px;
     background-color: #333333;
-    display: -webkit-box;
+    /* display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center;
+    align-items: center; */
     overflow: hidden;
+    z-index: 10;
+    position: sticky;
+    top: 0;
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: space-between;
     
   }
   
@@ -66,7 +72,7 @@
     color: #999999;
     font-size: 14px;
     text-transform: uppercase;
-    display: block;
+    display: grid;
     height: 60px;
     line-height: 60px;
     cursor: pointer;
@@ -86,9 +92,9 @@
   }
   
   .container .navbar ul .close span {
-    font-size: 40px;
+    /* font-size: 40px; */
     display: inline-block;
-    border: 1px solid #cccccc;
+    /* border: 1px solid #cccccc; */
     padding: 0 10px;
     cursor: pointer;
     color: white;
@@ -113,13 +119,32 @@
     height: 2px;
   }
   
+  @media only screen and (max-width: 360px) {
+    #mobile-searchdiv{
+      display: grid!important;
+    }
+    #desktop-searchdiv{
+      display: none!important;
+    }
+
+  }
+
   @media only screen and (max-width: 650px) {
+    
+    
+    /* #mobile-searchdiv{
+      display: grid!important;
+    }
+    #desktop-searchdiv{
+      display: none!important;
+    } */
+
     .container {
       -webkit-box-pack: justify;
       -ms-flex-pack: justify;
       justify-content: space-between;
     }
-  
+    
     .container .logo {
       -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -133,8 +158,7 @@
     }
   
     .container .navbar ul {
-      -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+      display: grid;
       position: fixed;
       left: 100%;
       -webkit-box-orient: vertical;
@@ -148,6 +172,7 @@
       -webkit-transition: left .3s;
       -o-transition: left .3s;
       transition: left .3s;
+      grid-auto-rows: 3rem;
     }
   
     .container .navbar ul li a {
@@ -182,10 +207,107 @@ p#Store-title-nav {
 }
 
 .container .navbar .active-header {
-  background-color: #232321;
+  /* background-color: #232321; */
+  background-color: #282825;
   color: white;
+  /* border-bottom: 2px red solid; */
 }
 
 .container .navbar .unactive-header {
   color: cadetblue;
+}
+
+[icon="shopping-cart"]{
+  background-image: url(../svgs/shopping-cart-svgrepo-com.svg);
+}
+
+.notif-small {
+  font-size: small;
+  color: white;
+  background-color: #f463fd;
+  padding: 5px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  /* display: block; */
+  height: 1rem;
+  display: grid;
+  align-content: center;
+  border: 1px #2f18b1 solid;
+}
+
+#cartli {
+  /* height: 100%; */
+  background-origin: content-box;
+  background-position-x: center;
+  aspect-ratio: 0;
+}
+
+
+.search-div3410 {
+  display: grid;
+  /* width: 80vw; */
+  min-width: 250px;
+  max-width: 350px;
+  background-color: white;
+  /* height: 10vh; */
+  /* position: absolute; */
+  /* left: 50%; */
+  padding: 0px;
+  margin: 5px;
+  /* top: 35%; */
+  gap: 2px;
+  /* transform: translate(-50%,-50%); */
+  grid-auto-flow: column;
+  grid-auto-columns: 80% 20%;
+  font-size: large;
+  border-radius: 5px;
+  align-items: center;
+  /* max-height: 50px; */
+
+}
+
+#mobile-searchdiv{
+  display: none;
+  margin: 0;
+  width: 100%;
+  max-width: 500px;
+  font-size: medium;
+  height: fit-content;
+  padding: 4px;
+}
+#desktop-searchdiv {
+  display: grid;
+  height: calc(100% - 10px);
+  overflow: hidden;
+}
+.search-div3410 input {
+  font-size: inherit;
+  color: inherit;
+  height: fit-content;
+  padding: 5px;
+  border: none;
+  background-color: inherit;
+  height: calc(100% - 20px);
+  height: fit-content;
+
+}
+
+[icon=search] {
+  background-image: url(../svgs/search-svgrepo-com.svg);
+  aspect-ratio: 1/1;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: auto;
+  flex-grow: 1;
+  background-origin: content-box;
+  border-left: 1px black solid;
+  padding: 5px;
+  /* border-radius: 5px; */
+}
+
+.search-icon {
+  border-left: 1px black solid;
+}
+.search-icon:hover {
+  color: #f463fd;
 }
