--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
+
+:root{
+  --swiper-pagination-bullet-inactive-color:white;
+  --swiper-pagination-bullet-inactive-opacity:1;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   width: 100vw;
+  background-color: #eaeded;
 
 
 }
@@ -41,4 +50,15 @@ a{
 
 p{
   margin: 0;
+}
+
+
+[icon]{
+  aspect-ratio: 1/1;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: auto;
+    flex-grow: 1;
+    background-origin: content-box;
+    padding: 5px;
 }
