--- a/src/sections/AdminDashBoard.css
+++ b/src/sections/AdminDashBoard.css
@@ -1,12 +1,12 @@
 Nav {
     align-items: center;
-    background: #0e0e16;
+    background: var(--theme-bg-color1);
     display: flex;
     height: 2.5rem;
     justify-content: space-between;
     left: 0;
     padding: 1vh 1vw;
-    position: fixed;
+    position: sticky;
     right: 0;
     top: 0;
     z-index: 1;
