--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   
   --theme-bg-color1:white;
   --theme-bg-color2:#aae5e5;
-  --theme-font-color2:#8b5d5d;
+  --theme-font-color2:#461c8d;
 }
 
 /* white -#080707 */
