--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
-.container {
-    height: 60px;
+.nav-container {
+    height: 4rem;
     background-color: #333333;
     /* display: -webkit-box;
     display: -ms-flexbox;
@@ -19,13 +19,13 @@
     
   }
   
-  .container .logo {
+  .nav-container .logo {
     max-width: 250px;
     padding: 0 10px;
     overflow: hidden;
   }
   
-  .container .logo a {
+  .nav-container .logo a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -34,15 +34,15 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    height: 60px;
+    height: 100%;
   }
   
-  .container .logo a img {
+  .nav-container .logo a img {
     max-width: 100%;
-    max-height: 60px;
+    max-height: 100%;
   }
   
-  .container .navbar {
+  .nav-container .navbar {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -56,7 +56,7 @@
     font-weight: bold;
   }
   
-  .container .navbar ul {
+  .nav-container .navbar ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -67,31 +67,33 @@
     padding: 0;
   }
   
-  .container .navbar ul li a {
+  .nav-container .navbar ul li a {
     text-decoration: none;
     color: #999999;
     font-size: 14px;
     text-transform: uppercase;
     display: grid;
-    height: 60px;
-    line-height: 60px;
+    height: 100%;
+    /* line-height: 60px; */
     cursor: pointer;
     padding: 0 10px;
     border-radius: 5px;
+    display: grid;
+    align-items: center;
   }
   
-  .container .navbar ul li a:hover {
+  .nav-container .navbar ul li a:hover {
     color: #ffffff;
     background-color: rgba(23, 23, 23, 0.9);
   }
   
-  .container .navbar ul .close {
+  .nav-container .navbar ul .close {
     display: none;
     text-align: right;
     padding: 10px;
   }
   
-  .container .navbar ul .close span {
+  .nav-container .navbar ul .close span {
     /* font-size: 40px; */
     display: inline-block;
     /* border: 1px solid #cccccc; */
@@ -100,9 +102,9 @@
     color: white;
   }
   
-  .container .navbar .icon-bar {
+  .nav-container .navbar .icon-bar {
     width: 50px;
-    height: 60px;
+    height: 100%;
     display: none;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -114,12 +116,12 @@
     cursor: pointer;
   }
   
-  .container .navbar .icon-bar i {
+  .nav-container .navbar .icon-bar i {
     background-color: #ffffff;
     height: 2px;
   }
   
-  @media only screen and (max-width: 360px) {
+  @media only screen and (max-width: 650px) {
     #mobile-searchdiv{
       display: grid!important;
     }
@@ -139,25 +141,25 @@
       display: none!important;
     } */
 
-    .container {
+    .nav-container {
       -webkit-box-pack: justify;
       -ms-flex-pack: justify;
       justify-content: space-between;
     }
     
-    .container .logo {
+    .nav-container .logo {
       -webkit-box-flex: 1;
       -ms-flex: 1;
       flex: 1;
     }
   
-    .container .navbar {
+    .nav-container .navbar {
       -webkit-box-flex: 0;
       -ms-flex: 0;
       flex: 0;
     }
   
-    .container .navbar ul {
+    .nav-container .navbar ul {
       display: grid;
       position: fixed;
       left: 100%;
@@ -175,7 +177,7 @@
       grid-auto-rows: 3rem;
     }
   
-    .container .navbar ul li a {
+    .nav-container .navbar ul li a {
       padding: 10px;
       font-size: 16px;
       height: auto;
@@ -184,17 +186,17 @@
       font-weight: bold;
   }
   
-    .container .navbar ul .close {
+    .nav-container .navbar ul .close {
       display: block;
     }
   
-    .container .navbar .icon-bar {
+    .nav-container .navbar .icon-bar {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
     }
   
-    .container .navbar ._Menus-show {
+    .nav-container .navbar ._Menus-show {
       left: 0;
     }
   }
@@ -206,14 +208,14 @@ p#Store-title-nav {
     font-family: Bebas Neue;
 }
 
-.container .navbar .active-header {
+.nav-container .navbar .active-header {
   /* background-color: #232321; */
   background-color: #282825;
   color: white;
   /* border-bottom: 2px red solid; */
 }
 
-.container .navbar .unactive-header {
+.nav-container .navbar .unactive-header {
   color: cadetblue;
 }
 
@@ -243,71 +245,3 @@ p#Store-title-nav {
 }
 
 
-.search-div3410 {
-  display: grid;
-  /* width: 80vw; */
-  min-width: 250px;
-  max-width: 350px;
-  background-color: white;
-  /* height: 10vh; */
-  /* position: absolute; */
-  /* left: 50%; */
-  padding: 0px;
-  margin: 5px;
-  /* top: 35%; */
-  gap: 2px;
-  /* transform: translate(-50%,-50%); */
-  grid-auto-flow: column;
-  grid-auto-columns: 80% 20%;
-  font-size: large;
-  border-radius: 5px;
-  align-items: center;
-  /* max-height: 50px; */
-
-}
-
-#mobile-searchdiv{
-  display: none;
-  margin: 0;
-  width: 100%;
-  max-width: 500px;
-  font-size: medium;
-  height: fit-content;
-  padding: 4px;
-}
-#desktop-searchdiv {
-  display: grid;
-  height: calc(100% - 10px);
-  overflow: hidden;
-}
-.search-div3410 input {
-  font-size: inherit;
-  color: inherit;
-  height: fit-content;
-  padding: 5px;
-  border: none;
-  background-color: inherit;
-  height: calc(100% - 20px);
-  height: fit-content;
-
-}
-
-[icon=search] {
-  background-image: url(../svgs/search-svgrepo-com.svg);
-  aspect-ratio: 1/1;
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: auto;
-  flex-grow: 1;
-  background-origin: content-box;
-  border-left: 1px black solid;
-  padding: 5px;
-  /* border-radius: 5px; */
-}
-
-.search-icon {
-  border-left: 1px black solid;
-}
-.search-icon:hover {
-  color: #f463fd;
-}
