--- a/src/componentsadmin/ProductDetailsRow.css
+++ b/src/componentsadmin/ProductDetailsRow.css
@@ -2,7 +2,7 @@
     background-color: white;
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 50% 20% 20% 10%;
+    grid-template-columns: 10% 45% 20% 20% 10%;
     justify-items: center;
     font-size: medium;
     font-weight: 500;
